# CyanOSKernel

./: .clang-format  .gitignore  .gitmodules  .travis.yml  BuildingGCC.md  CMakeLists.txt  CyanOS.code-workspace  LICENSE  Makefile  README.md  Toolchain.i686-default.cmake  Toolchain.i686-pe.cmake  build_cross_compiling_tools.sh
kernel/: CMakeLists.txt  CMakelists.txt  Kernel_init.cpp  Kernel_init.h  Kernel_map.h  Makefile  Tests.h  boot.cpp  console.cpp  console.h  kernel_init.cpp  kernel_init.h  kernel_map.h  linker.ld  memmap.h  stdlib.cpp  tests.h  text_mode.cpp
kernel/Arch/x86/: Asm.h  Boot.asm  Context.cpp  Context.h  Gdt.cpp  Gdt.h  Idt.cpp  Idt.h  Isr.cpp  Isr.h  Isr_dispatcher.asm  Paging.cpp  Paging.h  Panic.h  Pic.cpp  Pic.h  Spinlock.cpp  Spinlock.h  apic.cpp  apic.h  asm.h  atomic.cpp  atomic.h  boot.s  boot_paging.cpp  boot_paging.h  context.cpp  context.h  cpu.h  gdt.cpp  gdt.h  idt.cpp  idt.h  isr.cpp  isr.h  isr_dispatcher.s  paging.cpp  paging.h  panic.h  physical.cpp  (+6 more)
kernel/Boot/: Boot.cpp  Boot.h  Multiboot2.h  boot.cpp  boot.h  multiboot2.h
kernel/Devices/: DeviceDescription.cpp  DeviceDescription.h  DeviceFS.cpp  DeviceFS.h  DeviceManager.cpp  DeviceManager.h  DeviceNode.h
kernel/Devices/Bus/: PCI.cpp  PCI.h  PCIBaseAddressRegister.cpp  PCIBaseAddressRegister.h  PCIDevice.cpp  PCIDevice.h  PCIIdentification.cpp  PCIIdentification.h
kernel/Devices/Console/: Console.cpp  Console.h  console.cpp  console.h
kernel/Devices/DebugPort/: DebugPort.cpp  DebugPort.h  Logger.cpp  Logger.h
kernel/Devices/Ethernet/: Intel_i217.cpp  Intel_i217.h  RTL8139.cpp  RTL8139.h
kernel/Devices/Keyboard/: Keyboard.cpp  Keyboard.h
kernel/Devices/Null/: null.cpp  null.h
kernel/Devices/RTC/: Rtc.h  rtc.cpp  rtc.h
kernel/Devices/Timer/: Pit.cpp  Pit.h  pit.cpp  pit.h
kernel/Filesystem/: FSNode.h  FileDescription.cpp  FileDescription.h  FileDescriptor.cpp  FileDescriptor.h  FileSystemDefinitions.h  HandlesManager.cpp  HandlesManager.h  Mountpoint.cpp  Mountpoint.h  ProcessDescription.cpp  ProcessDescription.h  VirtualFilesystem.cpp  VirtualFilesystem.h  tar.cpp  tar.h  ustar.cpp  ustar.h  vfs.cpp  vfs.h
kernel/Filesystem/DomainSocket/: Connection.cpp  Connection.h  DomainSocket.cpp  DomainSocket.h  DomainSocketFS.cpp  DomainSocketFS.h
kernel/Filesystem/IPSocket/: IPSocket.cpp  IPSocket.h  TCPSocket.cpp  TCPSocket.h  UDPSocket.cpp
kernel/Filesystem/Pipes/: Pipe.cpp  Pipe.h  PipeFS.cpp  PipeFS.h
kernel/Filesystem/Socket/: Connection.cpp  Connection.h  Socket.cpp  Socket.h  SocketFS.cpp  SocketFS.h
kernel/Filesystem/Ustar/: INode.cpp  INode.h  TarFS.cpp  TarFS.h
kernel/Filesystem/pipes/: Pipe.cpp  Pipe.h  PipeFS.cpp  PipeFS.h
kernel/Filesystem/ustar/: INode.cpp  INode.h  TarFS.cpp  TarFS.h  ustar.cpp  ustar.h
kernel/IO/: io.cpp  io.h
kernel/Lib/: Malloc.cpp  Stdlib.cpp  Stdlib.h  malloc.cpp  new.h  stdlib.cpp  stdlib.h  stl.h
kernel/Network/: ARP.cpp  ARP.h  EthernetNetworkAdapter.cpp  EthernetNetworkAdapter.h  Network.cpp  Network.h  NetworkAdapter.cpp  NetworkAdapter.h  NetworkDefinitions.h
kernel/Network/ApplicationLayer/: DNS.cpp  DNS.h
kernel/Network/LinkLayer/: EthernetNetworkAdapter.cpp  EthernetNetworkAdapter.h  NetworkAdapter.cpp  NetworkAdapter.h
kernel/Network/NetworkLayer/: ARP.cpp  ARP.h  ICMP.cpp  ICMP.h  IPv4.cpp  IPv4.h
kernel/Network/TransportLayer/: DHCP.cpp  DHCP.h  (+5 more)
kernel/Tasking/: Mutex.cpp  Mutex.h  Process.cpp  Process.h  Scheduler.cpp  Scheduler.h  ScopedLock.h  Semaphore.cpp  Semaphore.h  SpinLock.h  SystemCall.cpp  SystemCall.h  Thread.cpp  Thread.h  WaitQueue.cpp  WaitQueue.h  mutex.cpp  mutex.h  scheduler.cpp  scheduler.h  semaphore.cpp  semaphore.h  thread.h
kernel/Utils/: Algorithms.h  Assert.h  Bitmap.cpp  CircularBuffer.h  CircularList.h  IntrusiveList.h  List.h  PathParser.cpp  PathParser.h  Result.h  SharedPointer.h  Stack.h  Stl.h  String.cpp  String.h  StringView.cpp  StringView.h  Types.h  UniquePointer.h  Vector.h
kernel/VirtualMemory/: Heap.cpp  Heap.h  Malloc.cpp  Memory.cpp  Memory.h  MemoryConstants.h  MemoryDefinitions.h  Physical.cpp  Physical.h  SlabAllocator.h  Virtual.cpp  Virtual.h  heap.cpp  heap.h  icxxabi.cpp  icxxabi.h  memory.cpp  memory.h  physical.cpp  physical.h  virtual.cpp  virtual.h
kernel/include/: stdlib.h  text_mode.h  types.h
kernel/utils/: Algorithm.h  CircularBuffer.h  CircularList.h  ErrorCodes.h  IntrusiveList.h  IterationDecision.h  List.h  PathParser.cpp  PathParser.h  Result.h  Rule5.h  SharedPointer.h  Stack.h  String.cpp  String.h  StringView.cpp  StringView.h  UniquePointer.h  UnitTests.cpp  UnitTests.h  Vector.h  assert.h  bitmap.cpp  bitmap.h  list.h  stl.h  types.h
libraries/: CMakeLists.txt
libraries/libsystem/: CMakeLists.txt  ErorrCodes.h
libraries/stdlib/: Algorithms.h  ArgumentParser.cpp  ArgumentParser.h  Array.h  Bitmap.cpp  Bitmap.h  Buffer.cpp  Buffer.h  BufferMutableView.h  BufferView.cpp  BufferView.h  CircularBuffer.h  CircularList.h  Clib.cpp  Clib.h  Concepts.h  ELF.h  ELFParser.cpp  ELFParser.h  Endianess.h  ErrorCodes.h  Function.h  Hashmap.h  IPv4Address.cpp  IPv4Address.h  IntrusiveList.h  IterationDecision.h  Iterators.h  List.h  MACAddress.cpp  MACAddress.h  NetworkAlgorithms.cpp  NetworkAlgorithms.h  New.h  PathParser.cpp  PathParser.h  PathParser2.cpp  PathParser2.h  PathView.cpp  PathView.h  (+15 more)
libraries/systemlib/: Types.h
libsystem/: CMakeLists.txt
libsystem/Systemcalls/: Systemcalls.cpp  Systemcalls.h
test/: 0_Test.cpp  ArgumentParser_Test.cpp  Bitmap_Test.cpp  CMakeLists.txt  CircularBuffer.cpp  CircularBuffer_Test.cpp  CircularQueue.cpp  CircularQueue_Test.cpp  CircularQueue_test.cpp  General_Test.cpp  IntrusiveList.cpp  IntrusiveList_Test.cpp  List_Test.cpp  PathParser.cpp  PathView_Test.cpp  Stack_Test.cpp  StringView.cpp  StringView_Test.cpp  StringView_test.cpp  String_Test.cpp  String_test.cpp  Test.cpp  Vector_Test.cpp
userspace/: CMakeLists.txt
userspace/Cat/: main.cpp
userspace/Shell/: CMakeLists.txt  main.cpp  main.h
userspace/Test/: CMakeLists.txt  main.cpp
userspace/TestApp/: CMakeLists.txt  main.cpp
(+318 files in other folders)
