SET(CMAKE_TOOLCHAIN_FILE "Toolchain.i686-pe.cmake")

cmake_minimum_required(VERSION 3.0.0)
project(CyanOS VERSION 0.1.0)
enable_testing()
add_subdirectory("googletest")
add_subdirectory("test")
include(CTest)
set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)